--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ h1{
     <div class="avatar">
       <img src="https://cdn.discordapp.com/attachments/1090932473120161854/1452557633272942624/obito-sad.gif?ex=694a3f36&is=6948edb6&hm=680d4d1f9739558e3bae1de22f4802eb4b3885452089914d4034c08f339dcbda&">
     </div>
-    <h1>Pintu Fire</h1>
+    <h1>Pintu Sharma</h1>
     <p class="quote">We never truly value a moment until it becomes a memory.</p>
     <p class="tag">@Pintufire1 • YouTube / Instagram</p>
 
