--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ h1{
       <a href="https://cdn.discordapp.com/attachments/1090932473120161854/1452634709279641682/ComingSoon.gif?ex=694a86ff&is=6949357f&hm=bf8640d9eb06e6305b6701d58d959012cf53827dc5ee3c61ee2a0d6866e75ad8&" target="_blank" title="YouTube">
         <i class="fab fa-youtube"></i>
       </a>
-      <a href="https://www.instagram.com/pntu03" target="_blank" title="Instagram">
+      <a href="https://www.instagram.com/pintufire1" target="_blank" title="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
       <a href="https://pintufire.vercel.app" target="_blank" title="My Website">
