--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@ h1{
       <a href="https://discord.gg/UX947BxXd8" target="_blank" title="Discord">
         <i class="fab fa-discord"></i>
       </a>
-      <a href="https://www.youtube.com/@epicframes07" target="_blank" title="YouTube">
+      <a href="https://cdn.discordapp.com/attachments/1090932473120161854/1452634709279641682/ComingSoon.gif?ex=694a86ff&is=6949357f&hm=bf8640d9eb06e6305b6701d58d959012cf53827dc5ee3c61ee2a0d6866e75ad8&" target="_blank" title="YouTube">
         <i class="fab fa-youtube"></i>
       </a>
-      <a href="https://www.instagram.com/epicframes07" target="_blank" title="Instagram">
+      <a href="https://cdn.discordapp.com/attachments/1090932473120161854/1452634709279641682/ComingSoon.gif?ex=694a86ff&is=6949357f&hm=bf8640d9eb06e6305b6701d58d959012cf53827dc5ee3c61ee2a0d6866e75ad8&" target="_blank" title="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://anmolportfolio.wixstudio.com/portfolio" target="_blank" title="My Website">
+      <a href="https://epicframeedits.vercel.app" target="_blank" title="My Website">
         <i class="fas fa-globe"></i>
       </a>
     </div>
