--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 body{
   min-height:100vh;
-  background:url('https://cdn.discordapp.com/attachments/1090932473120161854/1452560985607901184/photo-1508739773434-c26b3d09e071.jpg?ex=694a4256&is=6948f0d6&hm=a5eca229c98ee439f361564f8cbf38c04283fd285cbf84aa1fe0612e9a38b67b&') center/cover no-repeat;
+  background:url('photo-1508739773434-c26b3d09e071.jpg') center/cover no-repeat;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -212,7 +212,7 @@ h1{
 
 <!-- Music -->
 <audio id="bgMusic" loop>
-  <source src="https://cdn.discordapp.com/attachments/1090932473120161854/1452550293685538906/AudioCutter_Rakhlo_Tum_Chupaake256k2.mp3?ex=694a3861&is=6948e6e1&hm=b176cdbb7ea4033facf7e605e2b55926953042bd410cd3b1c5fc81e83d29ae69&" type="audio/mpeg">
+  <source src="AudioCutter_Rakhlo_Tum_Chupaake256k2.mp3" type="audio/mpeg">
 </audio>
 
 <div class="overlay"></div>
@@ -237,7 +237,7 @@ h1{
 <div class="container">
   <div class="card">
     <div class="avatar">
-      <img src="https://cdn.discordapp.com/attachments/1090932473120161854/1452557633272942624/obito-sad.gif?ex=694a3f36&is=6948edb6&hm=680d4d1f9739558e3bae1de22f4802eb4b3885452089914d4034c08f339dcbda&">
+      <img src="obito-sad.gif">
     </div>
     <h1>Pintu Sharma</h1>
     <p class="quote">We never truly value a moment until it becomes a memory.</p>
@@ -248,7 +248,7 @@ h1{
       <a href="https://discord.gg/UX947BxXd8" target="_blank" title="Discord">
         <i class="fab fa-discord"></i>
       </a>
-      <a href="https://cdn.discordapp.com/attachments/1090932473120161854/1452634709279641682/ComingSoon.gif?ex=694a86ff&is=6949357f&hm=bf8640d9eb06e6305b6701d58d959012cf53827dc5ee3c61ee2a0d6866e75ad8&" target="_blank" title="YouTube">
+      <a href="ComingSoon.gif" target="_blank" title="YouTube">
         <i class="fab fa-youtube"></i>
       </a>
       <a href="https://www.instagram.com/pintufire_" target="_blank" title="Instagram">
