--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 body{
   min-height:100vh;
-  background:url('photo-1508739773434-c26b3d09e071.jpg') center/cover no-repeat;
+  background:url('photo1508739773434c26b3d09e071.jpg') center/cover no-repeat;
   display:flex;
   align-items:center;
   justify-content:center;
@@ -237,7 +237,7 @@ h1{
 <div class="container">
   <div class="card">
     <div class="avatar">
-      <img src="obito-sad.gif">
+      <img src="obitosad.gif">
     </div>
     <h1>Pintu Sharma</h1>
     <p class="quote">We never truly value a moment until it becomes a memory.</p>
