--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ h1{
 
 <!-- Music -->
 <audio id="bgMusic" loop>
-  <source src="AudioCutter_Rakhlo_Tum_Chupaake256k2.mp3" type="audio/mpeg">
+  <source src="AudioCutter_Rakhlo_Tum_Chupaake(256k).mp3" type="audio/mpeg">
 </audio>
 
 <div class="overlay"></div>
