--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@ body{
   }
 }
 
+ .pf-shadow {
+  box-shadow: 0 18px 45px rgba(0, 0, 0, 0.35);
+ }
+  
 /* Start Screen */
 .start-screen{
   position:absolute;
@@ -217,6 +221,8 @@ h1{
 
 <div class="overlay"></div>
 
+<div class="container pf-shadow">
+  
 <!-- Start Screen -->
 <div class="start-screen" id="startScreen">
   <button class="start-btn" onclick="startMusic()">ENTER</button>
