--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@ h1{
   box-shadow:0 0 25px rgba(255,255,255,.6);
   z-index:6;
 }
+  /* Premium drop shadow for main card */
+.pf-shadow {
+  box-shadow: 0 18px 45px rgba(0, 0, 0, 0.35);
+    }
 </style>
 </head>
 
@@ -235,7 +239,7 @@ h1{
 
 <!-- Card -->
 <div class="container">
-  <div class="card">
+  <div class="card pf-shadow">
     <div class="avatar">
       <img src="obitosad.gif">
     </div>
