--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ sparkleToggle.onclick = () => {
   
 </script>
 <div class="glass-watermark">
-  © Epic Frame Edits
+  © Made by Pintu!!
 </div>
   
 </body>
