--- a/index.html
+++ b/index.html
@@ -209,36 +209,7 @@ h1{
 .pf-shadow {
   box-shadow: 0 18px 45px rgba(0, 0, 0, 0.35);
     }
-  .glass-watermark {
-  position: fixed;
-  bottom: 16px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 8px 18px;
-  font-size: 12px;
-  font-weight: 500;
-  letter-spacing: 0.4px;
-  color: rgba(255, 255, 255, 0.85);
-
-  background: linear-gradient(
-    135deg,
-    rgba(255, 255, 255, 0.35),
-    rgba(255, 255, 255, 0.08)
-  );
-
-  backdrop-filter: blur(14px);
-  -webkit-backdrop-filter: blur(14px);
-
-  border-radius: 999px;
-  border: 1px solid rgba(255, 255, 255, 0.25);
-
-  box-shadow:
-    0 8px 25px rgba(0, 0, 0, 0.35),
-    inset 0 1px 1px rgba(255, 255, 255, 0.35);
-
-  z-index: 999;
-  pointer-events: none; /* doesn’t block clicks */
-  }
+  
 </style>
 </head>
 
@@ -257,7 +228,7 @@ h1{
 </div>
 
 <!-- Volume -->
-<div class="volume">
+<div class=lume">
   <i class="fas fa-headphones"></i>
   <input type="range" min="0" max="100" value="40" id="volume">
 </div>
@@ -329,11 +300,6 @@ sparkleToggle.onclick = () => {
   sparkles.forEach(s => s.style.display = sparklesOn ? "block" : "none");
 };
 
-  
-</script>
-<div class="glass-watermark">
-  © Made by Pintu!!
-</div>
-  
+
 </body>
 </html>
