--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ h1{
 .pf-shadow {
   box-shadow: 0 18px 45px rgba(0, 0, 0, 0.35);
     }
-  
+
 </style>
 </head>
 
@@ -228,7 +228,7 @@ h1{
 </div>
 
 <!-- Volume -->
-<div class=lume">
+<div class=volume">
   <i class="fas fa-headphones"></i>
   <input type="range" min="0" max="100" value="40" id="volume">
 </div>
