--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ h1{
 </div>
 
 <!-- Volume -->
-<div class=volume">
+<div class="volume">
   <i class="fas fa-headphones"></i>
   <input type="range" min="0" max="100" value="40" id="volume">
 </div>
