--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@ sparkleToggle.onclick = () => {
   sparkles.forEach(s => s.style.display = sparklesOn ? "block" : "none");
 };
 
-
+</script>
+  
 </body>
 </html>
