--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ h1{
       <a href="ComingSoon.gif" target="_blank" title="YouTube">
         <i class="fab fa-youtube"></i>
       </a>
-      <a href="https://www.instagram.com/pintufire_" target="_blank" title="Instagram">
+      <a href="https://www.instagram.com/_laksh0307" target="_blank" title="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
       <a href="https://epicframeedits.vercel.app" target="_blank" title="My Website">
