--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta property="og:image" content="weblogo.jpg" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profile Of Pintu Fire</title>
+<title>Profile Of Pintu</title>
+<link rel="icon" type="image/jpg" href="weblogo.jpg">
 
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
