--- a/index.html
+++ b/index.html
@@ -247,14 +247,14 @@ h1{
     </div>
     <h1>Pintu Sharma</h1>
     <p class="quote">We never truly value a moment until it becomes a memory.</p>
-    <p class="tag">@ComingSoon • YouTube / Instagram</p>
+    <p class="tag">@Pintufire1 • YouTube / Instagram</p>
 
     <!-- Social links -->
     <div class="socials">
-      <a href="https://discord.gg/UX947BxXd8" target="_blank" title="Discord">
+      <a href="ComingSoon.gif" target="_blank" title="Discord">
         <i class="fab fa-discord"></i>
       </a>
-      <a href="ComingSoon.gif" target="_blank" title="YouTube">
+      <a href="https://www.youtube.com/@pintufire1" target="_blank" title="YouTube">
         <i class="fab fa-youtube"></i>
       </a>
       <a href="https://www.instagram.com/_laksh0307" target="_blank" title="Instagram">
