--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@ h1{
 
     <!-- Social links -->
     <div class="socials">
-      <a href="ComingSoon.gif" target="_blank" title="Discord">
-        <i class="fab fa-discord"></i>
+      <a href="https://t.me/pfarmy" target="_blank" title="Discord">
+        <i class="fab fa-telegram"></i>
       </a>
       <a href="https://www.youtube.com/@pintufire1" target="_blank" title="YouTube">
         <i class="fab fa-youtube"></i>
