--- a/index.html
+++ b/index.html
@@ -245,22 +245,22 @@ h1{
     <div class="avatar">
       <img src="obitosad.gif">
     </div>
-    <h1>Pintu Sharma</h1>
+    <h1>YapX</h1>
     <p class="quote">We never truly value a moment until it becomes a memory.</p>
-    <p class="tag">@Pintufire1 • YouTube / Instagram</p>
+    <p class="tag">@yapx • YouTube </p>
 
     <!-- Social links -->
     <div class="socials">
-      <a href="https://t.me/pfarmy" target="_blank" title="Discord">
+      <a href="https://t.me/yapx7" target="_blank" title="Discord">
         <i class="fab fa-telegram"></i>
       </a>
-      <a href="https://www.youtube.com/@pintufire1" target="_blank" title="YouTube">
+      <a href="https://www.youtube.com/@yapx" target="_blank" title="YouTube">
         <i class="fab fa-youtube"></i>
       </a>
-      <a href="https://www.instagram.com/_laksh0307" target="_blank" title="Instagram">
+      <a href="https://www.instagram.com/yapx7" target="_blank" title="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://epicframeedits.vercel.app" target="_blank" title="My Website">
+      <a href="https://epicframeedits.vercel.app" target="_blank" title="My Agency">
         <i class="fas fa-globe"></i>
       </a>
     </div>
