--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 body{
   min-height:100vh;
-  background:url('photo1508739773434c26b3d09e071.jpg') center/cover no-repeat;
+  background:url('bg.jpg') center/cover no-repeat;
   display:flex;
   align-items:center;
   justify-content:center;
