--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ h1{
 <div class="container">
   <div class="card pf-shadow">
     <div class="avatar">
-      <img src="obitosad.gif">
+      <img src="pfp.gif">
     </div>
     <h1>YapX</h1>
     <p class="quote">We never truly value a moment until it becomes a memory.</p>
